# git-storage

./: .gitignore  ACCEPTABLE-USE.md  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  IMPLEMENTATION-PLAN.md  LICENSE  NOTICE  README.md  USAGE.md
examples/: bench.rs
src/: backend.rs  chunker.rs  crypto.rs  engine.rs  gitrepo.rs  lib.rs  main.rs  manifest.rs  store.rs
src/backend/: provision.rs
tests/: backend.rs  cli.rs  compaction.rs  engine.rs  fuzz.rs  mirror.rs  property.rs  roundtrip.rs
