[package]
name = "git-storage"
version = "0.0.0"
edition = "2021"
description = "Milestone-0 walking skeleton: store files in a local git repo as fixed-size chunks."
license = "Apache-2.0"
publish = false

[[bin]]
name = "git-storage"
path = "src/main.rs"

[dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
